--- a/.github/workflows/pr-assignment.yml
+++ b/.github/workflows/pr-assignment.yml
@@ -9,3 +9,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: ./ # Uses an action in the root directory
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
