--- a/.github/workflows/pr-assignment.yml
+++ b/.github/workflows/pr-assignment.yml
@@ -10,4 +10,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: ./ # Uses an action in the root directory
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
